fix: brand 8848 wrapped in quotation marks
issue #6602

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2620,7 +2620,7 @@
   client:
     type: browser
     name: PrivacyWall
-    version: 70.0
+    version: "70.0"
     engine: Gecko
     engine_version: "70.0"
 -
@@ -2628,7 +2628,7 @@
   client:
     type: browser
     name: Ghostery Privacy Browser
-    version: 3.0
+    version: "3.0"
     engine: Gecko
     engine_version: "78.0"
 -
