--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6539,7 +6539,7 @@
   client:
     type: browser
     name: Seraphic Sraf
-    version: 4.0
+    version: "4.0"
     engine: Blink
     engine_version: ""
   device:
@@ -6651,7 +6651,7 @@
   client:
     type: browser
     name: T-Browser
-    version: 2.0
+    version: "2.0"
     engine: Blink
     engine_version: ""
   device:
@@ -6669,7 +6669,7 @@
   client:
     type: browser
     name: T-Browser
-    version: 2.0
+    version: "2.0"
     engine: Blink
     engine_version: ""
   device:
@@ -6687,7 +6687,7 @@
   client:
     type: browser
     name: T-Browser
-    version: 2.0
+    version: "2.0"
     engine: Blink
     engine_version: ""
   device:
@@ -6705,7 +6705,7 @@
   client:
     type: browser
     name: T-Browser
-    version: 2.0
+    version: "2.0"
     engine: Blink
     engine_version: ""
   device:
