--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -186,7 +186,7 @@
   os:
     name: MorphOS
     short_name: MOR
-    version: 3.7
+    version: "3.7"
     platform:
 -
   user_agent: Mozilla/5.0 (Linux; U; Android 2.3.7; fr-fr; Nexus One Build/GRK39F; CyanogenMod-7.2.0) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
@@ -627,7 +627,7 @@
   os:
     name: ThreadX
     short_name: TDX
-    version: 4.0
+    version: "4.0"
     platform:
 -
   user_agent: Mozilla/5.0 (MeeGo; NokiaN9) AppleWebKit/534.13 (KHTML, like Gecko) NokiaBrowser/8.5.0 Mobile Safari/534.13
