feat(device) detect brand iNew model: Fire Tab 6 feat(device) detect brand Chico Mobile models: Alto 5, Alto 3, Alto 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7219,7 +7219,7 @@ iLA:
 
 # iNew
 iNew:
-  regex: 'iNew|(?:V7A|V3 Plus|V3-?E|V3C)(?:[);/ ]|$)'
+  regex: 'iNew|(?:V7A|V3 Plus|V3-?E|V3C|FIRE_Tab_6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V3C(?:[);/ ]|$)'
@@ -7230,6 +7230,10 @@ iNew:
       model: 'V3 Plus'
     - regex: 'V7A(?:[);/ ]|$)'
       model: 'V7A'
+    - regex: 'FIRE_Tab_6(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Fire Tab 6'
+
     - regex: 'iNew[ -_]([^;/]+) Build'
       model: '$1'
 
@@ -19924,7 +19928,7 @@ Invens:
 
 # Chico Mobile (chicomobile.ph)
 Chico Mobile:
-  regex: '(?:ALTO (?:Bombo|classic|Estrella|JUEGO|SUBIR)|FUEGO MAX|OJOS[ _](?:CAMBIO|NUBE|[68i]|ORO))(?:[);/ ]|$)'
+  regex: '(?:ALTO (?:Bombo|classic|Estrella|JUEGO|SUBIR|[235])|FUEGO MAX|OJOS[ _](?:CAMBIO|NUBE|[68i]|ORO))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ALTO Bombo'
@@ -19937,6 +19941,8 @@ Chico Mobile:
       model: 'Alto Juego'
     - regex: 'ALTO SUBIR'
       model: 'Alto Subir'
+    - regex: 'ALTO ([235])'
+      model: 'Alto $1'
     - regex: 'OJOS[ _]([68i])'
       model: 'Ojos $1'
     - regex: 'OJOS NUBE'
