feat(device) detect brand Essentielb model: Wooze I45 feat(device) detect brand Motorola model: One Macro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4670,13 +4670,13 @@ Eton:
 
 # Essentielb
 Essentielb:
-  regex: '(?:Wooze[_ ](?:I55?|L|XL)|HEYOU[135])(?:[);/ ]|$)'
+  regex: '(?:Wooze[_ ]?(?:I55?|I45|X?L)|HEYOU[135])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'HEYOU([135])(?:[);/ ]|$)'
       model: 'HEYou $1'
-    - regex: '(Wooze[_ ](?:I55?|L|XL))(?:[);/ ]|$)'
-      model: '$1'
+    - regex: 'Wooze[_ ]?((?:I55?|I45|X?L))(?:[);/ ]|$)'
+      model: 'Wooze $1'
 
 # Rikomagic
 Rikomagic:
@@ -10122,6 +10122,8 @@ Motorola:
       model: 'One Zoom'
     - regex: 'motorola one action'
       model: 'One Action'
+    - regex: 'motorola one macro'
+      model: 'One Macro'
 
     - regex: 'moto g power'
       model: 'Moto G Power'
