feat(device) detect brand Casper model: VIA S30 feat(device) detect brand Inoi model: 5 (2021) fix(device) detect brand ZTE model: Blade A5 (2019)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3459,7 +3459,7 @@ Casio:
 
 # Casper
 Casper:
-  regex: 'CASPER[_ ]|VIA[- _](T7D|A[34]|E3|F[123]|G4|M4|[LS]8|S7|P2|V8C|A1_Plus|A1(?:_1)?|S10|S|T17_M|T1[07]|T7|T7-3G|T8B|T8D-3G)(?:[);/ ]|$)'
+  regex: 'CASPER[_ ]|VIA[- _](T7D|A[34]|E3|F[123]|G4|M4|[LS]8|S7|P2|V8C|A1_Plus|A1(?:_1)?|S[13]0|S|T17_M|T1[07]|T7|T7-3G|T8B|T8D-3G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:CASPER[_ ])?VIA[_ ](G1_Plus|G1|E1|[AE]2|M[123]|V[35689]|V10|G3|V6X|A[34]|E3|F[123]|G4|M4|P2|S|V8C|A1_Plus|A1(?:_1)?)(?:[);/ ]|$)'
@@ -3475,7 +3475,7 @@ Casper:
     - regex: 'VIA[- _](T7|T8D)-3G'
       model: 'VIA $1 3G'
       device: 'tablet'
-    - regex: 'VIA[- _](T7D|S10|[LS]8|S7|T17_M|T1[07]|T7|T8B)(?:[);/ ]|$)'
+    - regex: 'VIA[- _](T7D|S[13]0|[LS]8|S7|T17_M|T1[07]|T7|T8B)(?:[);/ ]|$)'
       model: 'VIA $1'
       device: 'tablet'
 
@@ -16765,13 +16765,13 @@ ZTE:
       model: 'Blade L7'
     - regex: 'Blade L8(?:RU)?(?:[);/ ]|$)'
       model: 'Blade L8'
-    - regex: 'Blade A3 2019-T(?:[);/ ]|$)'
+    - regex: 'Blade A3 2019'
       model: 'Blade A3 (2019)'
-    - regex: 'Blade A7 2019-T(?:[);/ ]|$)'
+    - regex: 'Blade A7 2019'
       model: 'Blade A7 (2019)'
-    - regex: 'Blade A7 2020(?:[);/ ]|$)'
+    - regex: 'Blade A7 2020'
       model: 'Blade A7 (2020)'
-    - regex: 'Blade A5 2019-T(?:[);/ ]|$)'
+    - regex: 'Blade A5 2019'
       model: 'Blade A5 (2019)'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
       model: 'Blade A6'
@@ -17082,11 +17082,9 @@ Inoi:
   models:
     - regex: 'INOI 2 Lite 2019'
       model: '2 Lite (2019)'
-    - regex: 'INOI 2 2019'
-      model: '2 (2019)'
-    - regex: 'INOI 7 2020'
-      model: '7 (2020)'
-    - regex: 'INOI[_ ]([^;/]+)(?: Build|[;)])'
+    - regex: 'INOI ([257]) (2019|202[01])(?:[);/ ]|$)'
+      model: '$1 ($2)'
+    - regex: 'INOI[_ ]([^);/]+)(?: Build|\))'
       model: '$1'
 
 # Vertex
