feat(browser) detect browser SP Browser feat(browser) detect browser Sleipnir feat(app) detect app TikTok
issue #6604

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -623,3 +623,19 @@
     model: iPhone 8
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: TikTok/131012 CFNetwork/978.0.7 Darwin/18.7.0
+  os:
+    name: iOS
+    version: "12.4"
+    platform: ""
+  client:
+    type: mobile app
+    name: TikTok
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
