--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -271,3 +271,7 @@
   regex: 'Procast/?([\d\.]+)?'
   name: 'Procast'
   version: '$1'
+-
+  regex: 'TikTok/(\d+[\.\d]+) CFNetwork'
+  name: 'TikTok'
+  version: ''
