feat(browser) detect browser Opera Mini iOS feat(app) detect apps: RoboForm, iFolder
issue #6604

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2951,3 +2951,11 @@
     version: 3.8.2
     engine: WebKit
     engine_version: ""
+-
+  user_agent: 'Opera%20Mini/16.0.4.120849 CFNetwork/758.4.3 Darwin/15.5.0'
+  client:
+    type: browser
+    name: Opera Mini iOS
+    version: 16.0.4.120849
+    engine: WebKit
+    engine_version: ""
