--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -976,6 +976,12 @@
   version: '$1'
   engine:
     default: 'WebKit'
+- regex: 'Opera%20Mini/(\d+[\.\d]+) CFNetwork'
+  name: 'Opera Mini iOS'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+
 - regex: 'Opera.+Edition Next.+Version/(\d+[\.\d]+)'
   name: 'Opera Next'
   version: '$1'
