--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -275,3 +275,7 @@
   regex: 'TikTok/(\d+[\.\d]+) CFNetwork'
   name: 'TikTok'
   version: ''
+
+- regex: '(RoboForm|iFolder)/(\d+[\.\d]+) CFNetwork'
+  name: '$1'
+  version: '$2'
