--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17101,7 +17101,7 @@ Inoi:
       model: '2 Lite (2019)'
     - regex: 'INOI ([257]) (2019|202[01])(?:[);/ ]|$)'
       model: '$1 ($2)'
-    - regex: 'INOI[_ ]([^);/]+)(?: Build|\))'
+    - regex: 'INOI[_ ]([^);/]+)(?: Build|[;)])'
       model: '$1'
 
 # Vertex
