Adds detection for xStand browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2935,3 +2935,11 @@
     version: "4.5"
     engine: ""
     engine_version: ""
+-
+  user_agent: xStand/6.6.2 CFNetwork/720.5.7 Darwin/14.5.0 (x86_64)
+  client:
+    type: browser
+    name: xStand
+    version: 6.6.2
+    engine: ""
+    engine_version: ""
