--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# xStand (https://www.adnx.com/)
+- regex: 'xStand/(\d+[\.\d]+)'
+  name: 'xStand'
+  version: '$1'
+
 # Biyubi (http://www.biyubi.com/)
 - regex: 'Biyubi/(\d+[\.\d]+)'
   name: 'Biyubi'
