--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,6 +9,8 @@
 - regex: 'xStand/(\d+[\.\d]+)'
   name: 'xStand'
   version: '$1'
+  engine:
+    default: 'Webkit'
 
 # Biyubi (http://www.biyubi.com/)
 - regex: 'Biyubi/(\d+[\.\d]+)'
